<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_search_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin_twenty_five"
        android:hint="@string/term_search_placeholder"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/btn_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_instructions" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_search"
        android:layout_width="@dimen/search_button_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_margin"
        android:padding="@dimen/default_margin"
        android:src="@android:drawable/ic_menu_search"
        app:layout_constraintBottom_toBottomOf="@+id/et_search_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_search_box" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/term_search_instructions"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/et_search_box"
        app:layout_constraintStart_toStartOf="@+id/et_search_box"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_search_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/search_results"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/et_search_box"
        app:layout_constraintTop_toBottomOf="@+id/btn_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_products"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_search_results" />

    <ProgressBar
        android:id="@+id/pb_loader"
        style="?android:attr/progressBarStyle"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_search_results" />

    <ImageView
        android:layout_width="@dimen/image_measures"
        android:layout_height="@dimen/image_measures"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="@+id/tv_instructions"
        app:layout_constraintEnd_toStartOf="@+id/tv_instructions"
        app:layout_constraintTop_toTopOf="@+id/tv_instructions"
        app:srcCompat="@drawable/meli" />

</androidx.constraintlayout.widget.ConstraintLayout>